top-products added and swaager updated
